add jspsych under exp dir

--- a/exp/exp1.html
+++ b/exp/exp1.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <script src="../jspsych-6.3.1/jspsych.js"></script>
-    <script src="../jspsych-6.3.1/plugins/jspsych-html-keyboard-response.js"></script>
-    <script src="../jspsych-6.3.1/plugins/jspsych-survey-likert.js"></script>
-    <script src="../jspsych-6.3.1/plugins/jspsych-survey-text.js"></script>
-    <script src="../jspsych-6.3.1/plugins/jspsych-survey-multi-choice.js"></script>
-    <script src="../jspsych-6.3.1/plugins/jspsych-fullscreen.js"></script>
-    <script src="../jspsych-6.3.1/plugins/jspsych-call-function.js"></script>
-    <link rel="stylesheet" href="../jspsych-6.3.1/css/jspsych.css" />
+    <script src="./js/jspsych-6.3.1/jspsych.js"></script>
+    <script src="./js/jspsych-6.3.1/plugins/jspsych-html-keyboard-response.js"></script>
+    <script src="./js/jspsych-6.3.1/plugins/jspsych-survey-likert.js"></script>
+    <script src="./js/jspsych-6.3.1/plugins/jspsych-survey-text.js"></script>
+    <script src="./js/jspsych-6.3.1/plugins/jspsych-survey-multi-choice.js"></script>
+    <script src="./js/jspsych-6.3.1/plugins/jspsych-fullscreen.js"></script>
+    <script src="./js/jspsych-6.3.1/plugins/jspsych-call-function.js"></script>
+    <link rel="stylesheet" href="./js/jspsych-6.3.1/css/jspsych.css" />
   </head>
   <body></body>
   <script type="text/javascript" src="./js/util.js"></script>
