--- a/exp/exp1_casual.html
+++ b/exp/exp1_casual.html
@@ -165,8 +165,22 @@
       },
     };
 
+    var cursor_on = {
+      type: 'call-function',
+      func: function () {
+        document.body.style.cursor = 'default';
+      },
+    };
+
+    var cursor_off = {
+      type: 'call-function',
+      func: function () {
+        document.body.style.cursor = 'none';
+      },
+    };
+
     var flanker_task = {
-      timeline: [inst_flanker_procedure, flanker_practice, inst_flanker_go_main, flanker_main],
+      timeline: [cursor_off, inst_flanker_procedure, flanker_practice, inst_flanker_go_main, flanker_main, cursor_on],
     };
 
     // BIS-BAS -----------------------------------------------------------------
