edit tutorial files

--- a/tutorial/exercise/BB01_change_item_scale.html
+++ b/tutorial/exercise/BB01_change_item_scale.html
@@ -14,8 +14,8 @@
       type: 'survey-likert',
       questions: [
         {
-          prompt: '競争に勝ったら，私は興奮するだろう',
-          labels: ['あてはまらない', 'どちらかと言えばあてはまらない', 'どちらかと言えばあてはまる', 'あてはまる'],
+          prompt: '私は，興奮や新しい刺激を切望している', // ここで質問文を変更
+          labels: ['あてはまらない', 'どちらかと言えばあてはまらない', 'どちらでもない', 'どちらかと言えばあてはまる', 'あてはまる'], // scale を変更
           required: true,
         },
       ],
