--- a/tutorial/exercise/BB02_four_items.html
+++ b/tutorial/exercise/BB02_four_items.html
@@ -18,6 +18,21 @@
           labels: ['あてはまらない', 'どちらかと言えばあてはまらない', 'どちらかと言えばあてはまる', 'あてはまる'],
           required: true,
         },
+        {
+          prompt: '私は，興奮や新しい刺激を切望している',
+          labels: ['あてはまらない', 'どちらかと言えばあてはまらない', 'どちらかと言えばあてはまる', 'あてはまる'],
+          required: true,
+        },
+        {
+          prompt: '非難されたり怒られたりすると，私はかなり傷つく',
+          labels: ['あてはまらない', 'どちらかと言えばあてはまらない', 'どちらかと言えばあてはまる', 'あてはまる'],
+          required: true,
+        },
+        {
+          prompt: '私はしばしば時のはずみで行動する',
+          labels: ['あてはまらない', 'どちらかと言えばあてはまらない', 'どちらかと言えばあてはまる', 'あてはまる'],
+          required: true,
+        },
       ],
       scale_width: 500,
     };
