--- a/tutorial/exercise/FL01_single_trial.html
+++ b/tutorial/exercise/FL01_single_trial.html
@@ -10,7 +10,7 @@
   <script>
     var trial = {
       type: 'html-keyboard-response',
-      stimulus: '<<<<<',
+      stimulus: '>>>>>', // ここを変更する
       choices: ['f', 'j'],
     };
 
