--- a/tutorial/exercise/FL03_timeline_variables.html
+++ b/tutorial/exercise/FL03_timeline_variables.html
@@ -8,14 +8,26 @@
   </head>
   <body></body>
   <script>
+    var stims_flanker = [
+      { stim: '<<<<<' }, // 「stim」は呼び出すためのキー
+      { stim: '>>>>>' },
+      { stim: '>><>>' },
+      { stim: '<<><<' },
+    ];
+
     var trial = {
       type: 'html-keyboard-response',
-      stimulus: '<<<<<',
+      stimulus: jsPsych.timelineVariable('stim'),
       choices: ['f', 'j'],
     };
 
-    jsPsych.init({
+    var block = {
       timeline: [trial],
+      timeline_variables: stims_flanker,
+    };
+
+    jsPsych.init({
+      timeline: [block],
     });
   </script>
 </html>
