--- a/tutorial/goal/bis-bas.html
+++ b/tutorial/goal/bis-bas.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="../../jspsych-6.3.1/jspsych.js"></script>
-    <script src="../../jspsych-6.3.1/plugins/jspsych-html-keyboard-response.js"></script>
-    <script src="../../jspsych-6.3.1/plugins/jspsych-survey-likert.js"></script>
-    <link rel="stylesheet" href="../../jspsych-6.3.1/css/jspsych.css" />
+    <meta charset="UTF-8" />
+    <script src="../jspsych-6.3.1/jspsych.js"></script>
+    <script src="../jspsych-6.3.1/plugins/jspsych-html-keyboard-response.js"></script>
+    <script src="../jspsych-6.3.1/plugins/jspsych-survey-likert.js"></script>
+    <link rel="stylesheet" href="../jspsych-6.3.1/css/jspsych.css" />
   </head>
   <body></body>
   <script>
