--- a/tutorial/exercise/FL02_four_trials.html
+++ b/tutorial/exercise/FL02_four_trials.html
@@ -12,24 +12,28 @@
       type: 'html-keyboard-response',
       stimulus: '<<<<<',
       choices: ['f', 'j'],
+      post_trial_gap: 500,
     };
 
     var trial2 = {
       type: 'html-keyboard-response',
       stimulus: '>>>>>',
       choices: ['f', 'j'],
+      post_trial_gap: 500,
     };
 
     var trial3 = {
       type: 'html-keyboard-response',
       stimulus: '<<><<',
       choices: ['f', 'j'],
+      post_trial_gap: 500,
     };
 
     var trial4 = {
       type: 'html-keyboard-response',
       stimulus: '>><>>',
       choices: ['f', 'j'],
+      post_trial_gap: 500,
     };
 
     jsPsych.init({
