--- a/tutorial/start/flanker.html
+++ b/tutorial/start/flanker.html
@@ -12,6 +12,7 @@
       type: 'html-keyboard-response',
       stimulus: '<<<<<',
       choices: ['f', 'j'],
+      post_trial_gap: 500,
     };
 
     jsPsych.init({
