--- a/tutorial/exercise/FL03_timeline_variables.html
+++ b/tutorial/exercise/FL03_timeline_variables.html
@@ -21,6 +21,7 @@
       type: 'html-keyboard-response',
       stimulus: jsPsych.timelineVariable('stim'),
       choices: ['f', 'j'],
+      post_trial_gap: 500,
     };
 
     var block = {
