--- a/exp/exp1_casual.html
+++ b/exp/exp1_casual.html
@@ -157,7 +157,7 @@
 
     var flanker_practice = {
       timeline: [blank, fixation, trial_flanker],
-      timeline_variables: stims_flanker,
+      timeline_variables: stims_flanker_main,
       sample: {
         type: 'fixed-repetitions',
         size: repeat_practice,
@@ -166,7 +166,7 @@
 
     var flanker_main = {
       timeline: [blank, fixation, trial_flanker],
-      timeline_variables: stims_flanker,
+      timeline_variables: stims_flanker_practice,
       sample: {
         type: 'fixed-repetitions',
         size: repeat_main,
