add demo data and tutorial doc

--- a/tutorial/goal/flanker.html
+++ b/tutorial/goal/flanker.html
@@ -13,6 +13,8 @@
       { stim: '>>>>>', condition: '一致', key: 'j' },
       { stim: '>><>>', condition: '不一致', key: 'f' },
       { stim: '<<><<', condition: '不一致', key: 'j' },
+      { stim: '--<--', condition: '中性', key: 'f' },
+      { stim: '-->--', condition: '中性', key: 'j' },
     ];
 
     var inst_flanker = {
